<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/Padding_Size_16"
                android:layout_marginVertical="@dimen/Padding_Size_8"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/Padding_Size_12"
                android:text="@string/PhoneNumber"
                android:textColor="@color/black"
                android:textSize="@dimen/Size_Sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvDone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/Padding_Size_16"
                android:layout_marginVertical="@dimen/Padding_Size_8"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/light_purple"
                android:textSize="@dimen/Size_Sp_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/Padding_Size_20"
            android:layout_marginVertical="@dimen/Padding_Size_32"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="@dimen/Padding_Size_12"
            android:text="@string/confirm"
            android:textColor="@color/black"
            android:textSize="@dimen/Size_Sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutCountery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Padding_Size_52"
            android:layout_marginHorizontal="@dimen/Padding_Size_20"
            android:layout_marginVertical="@dimen/Padding_Size_24"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConfirm">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFlag"
                android:layout_width="@dimen/Padding_Size_20"
                android:layout_height="@dimen/Padding_Size_20"
                android:layout_gravity="center|left"
                android:src="@drawable/flag"
                android:layout_marginStart="@dimen/Padding_Size_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFlag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/Padding_Size_8"
                android:layout_marginVertical="@dimen/Padding_Size_8"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center|left"
                android:text="INDIA"
                android:textColor="@color/black"
                android:textSize="@dimen/Size_Sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivFlag"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivForward"
                android:layout_width="@dimen/Padding_Size_20"
                android:layout_height="@dimen/Padding_Size_20"
                android:layout_gravity="center|left"
                android:layout_marginHorizontal="@dimen/Padding_Size_16"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:tint="@color/light_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/Padding_Size_52"
            android:layout_marginHorizontal="@dimen/Padding_Size_20"
            android:layout_marginVertical="@dimen/Padding_Size_24"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutCountery">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/Padding_Size_8"
                android:layout_marginStart="@dimen/Padding_Size_24"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center|left"
                android:text="+91"
                android:textColor="@color/black"
                android:textSize="@dimen/Size_Sp_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/evPhoneNumber"
                android:layout_width="@dimen/Padding_Size_300"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/Padding_Size_8"
                android:layout_marginVertical="@dimen/Padding_Size_8"
                android:background="@null"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center|left"
                android:hint="0000000000"
                android:maxLength="10"
                android:inputType="number"
                android:letterSpacing="0.2"
                android:textColor="@color/black"
                android:textSize="@dimen/Size_Sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvCode"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>